gitops/apps/blood-finder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blood-finder
  namespace: blood-finder
  labels:
    app: blood-finder
spec:
  selector:
    app: blood-finder
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
